Установка python/whisperx/ffmpeg при первом запуске